fix(admin): resolve generic type inference issue in AdminHomeFrame